feat: project main configuration

--- a/index.html
+++ b/index.html
@@ -7,6 +7,47 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- header -->
+    <header>
+
+    </header>
+    <!-- /header -->
+
+    <!-- main -->
+    <main class="main">
+        <section class="row">
+            <div class="col">
+                <img src="./img/1.webp" alt="">
+                <h3>Levi's</h2>
+                <h2>RELAXED FIT TEE UNISEX</h1>
+                <h4><span>14,99 €</span> 29,99 €</h4>
+                <span class="red">-50%</span>
+                <span class="green">Sostenibilità</span>
+                <span class="hearths"> &hearts;</span>
+            </div>
+            <div class="col">
+                <img src="./img/2.webp" alt="">
+            </div>
+            <div class="col">
+                <img src="./img/3.webp" alt="">
+            </div>
+            <div class="col">
+                <img src="./img/4.webp" alt="">
+            </div>
+            <div class="col">
+                <img src="./img/5.webp" alt="">
+            </div>
+            <div class="col">
+                <img src="./img/6.webp" alt="">
+            </div>
+        </section>
+    </main>
+    <!-- /main -->
+
+    <!-- footer -->
+    <footer>
+
+    </footer>
+    <!-- /footer -->
 </body>
 </html>
