--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
+
 <body>
     <!-- header -->
     <header>
@@ -15,32 +17,105 @@
 
     <!-- main -->
     <main class="main">
-        <section class="row">
-            <div class="col">
-                <img src="./img/1.webp" alt="">
-                <h3>Levi's</h2>
-                <h2>RELAXED FIT TEE UNISEX</h1>
-                <h4><span>14,99 €</span> 29,99 €</h4>
-                <span class="red">-50%</span>
-                <span class="green">Sostenibilità</span>
-                <span class="hearths"> &hearts;</span>
+        <section class="row container">
+            <div class="col relative">
+                <div class="card">
+                    <div class="card-image">
+                        <img class="img-a" src="./img/1.webp" alt="">
+                        <img class="img-b" src="./img/1b.webp" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h3>Levi's</h3>
+                        <h2>RELAXED FIT TEE UNISEX</h2>
+                        <h4><span class="red-text">14,99 €</span> <span class="line">29,99 €</span></h4>
+                        <span class="red">-50%</span>
+                        <span class="green">Sostenibilità</span>
+                        <button class="hearths">&hearts;</button>
+                    </div>
+                </div>
             </div>
-            <div class="col">
-                <img src="./img/2.webp" alt="">
+
+            <div class="col relative">
+                <div class="card">
+                    <div class="card-image">
+                        <img class="img-a" src="./img/2.webp" alt="">
+                        <img class="img-b" src="./img/2b.webp" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h3>Guess</h3>
+                        <h2>ROSES TEE</h2>
+                        <h4><span class="red-text">14,99 €</span> <span class="line">29,99 €</span></h4>
+                        <span class="red">-30%</span>
+                        <button class="hearths">&hearts;</button>
+                    </div>
+                </div>
             </div>
-            <div class="col">
-                <img src="./img/3.webp" alt="">
+
+            <div class="col relative">
+                <div class="card">
+                    <div class="card-image">
+                        <img class="img-a" src="./img/3.webp" alt="">
+                        <img class="img-b" src="./img/3b.webp" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h3>Come Zucchero Filato</h3>
+                        <h2>VOGLIA DI COLORI PASTELLO</h2>
+                        <h4><span class="red-text">14,99 €</span> <span class="line">29,99 €</span></h4>
+                        <span class="red">-30%</span>
+                        <button class="hearths">&hearts;</button>
+                    </div>
+                </div>
             </div>
-            <div class="col">
-                <img src="./img/4.webp" alt="">
+
+            <div class="col relative">
+                <div class="card">
+                    <div class="card-image">
+                        <img class="img-a" src="./img/4.webp" alt="">
+                        <img class="img-b" src="./img/4b.webp" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h3>Levi's</h3>
+                        <h2>TEE UNISEX</h2>
+                        <h4><span class="red-text">14,99 €</span> <span class="line">29,99 €</span></h4>
+                        <span class="red">-50%</span>
+                        <span class="green">Sostenibilità</span>
+                        <button class="hearths">&hearts;</button>
+                    </div>
+                </div>
             </div>
-            <div class="col">
-                <img src="./img/5.webp" alt="">
+
+            <div class="col relative">
+                <div class="card">
+                    <div class="card-image">
+                        <img class="img-a" src="./img/5.webp" alt="">
+                        <img class="img-b" src="./img/5b.webp" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h3>Maya Deluxe</h3>
+                        <h2>STRIPE BODICE</h2>
+                        <h4><span class="red-text">14,99 €</span> <span class="line">29,99 €</span></h4>
+                        <button class="hearths">&hearts;</button>
+                    </div>
+                </div>
             </div>
-            <div class="col">
-                <img src="./img/6.webp" alt="">
+
+            <div class="col relative">
+                <div class="card">
+                    <div class="card-image">
+                        <img class="img-a" src="./img/6.webp" alt="">
+                        <img class="img-b" src="./img/6b.webp" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h3>Esprit</h3>
+                        <h2>MAGLIONE - BLACK</h2>
+                        <h4><span class="red-text">14,99 €</span> <span class="line">29,99 €</span></h4>
+                        <span class="green close">Sostenibilità</span>
+                        <button class="hearths">&hearts;</button>
+                    </div>
+                </div>
             </div>
         </section>
+
     </main>
     <!-- /main -->
 
@@ -50,4 +125,5 @@
     </footer>
     <!-- /footer -->
 </body>
+
 </html>
