feat: header minor fixes

--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
     <!-- header -->
     <header class="flex">
         <div class="flex container space-b">
-            <div class="flex">
+            <div class="flex shop menu">
                 <ul class="flex">
                     <li><a href="">Donna</a></li>
                     <li><a href="">Uomo</a></li>
                     <li><a href="">Bambini</a></li>
                 </ul>
             </div>
-            <H1>BOOLEAN</H1>
-            <div class="flex">
+            <div>
+                <img class="logo" src="./img/boolean-logo.png" alt="">
+            </div>
+            <div class="flex user menu">
                 <ul class="flex">
                     <li><a href=""><i class="fa-regular fa-user"></i></a></li>
                     <li><a href=""><i class="fa-regular fa-heart"></i></a></li>
